extracted facts and dimension tables

--- a/uber_data_analysis.ipynb
+++ b/uber_data_analysis.ipynb
@@ -32,9 +32,7 @@
   {
    "cell_type": "markdown",
    "id": "e44ff9eb-4ef2-4ace-8e67-73032b5474ba",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Loading and Understanding Data"
    ]
@@ -245,7 +243,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('uber_data.csv', parse_dates=['tpep_pickup_datetime', 'tpep_dropoff_datetime'])\n",
+    "df = pd.read_csv('Data/uber_data.csv', parse_dates=['tpep_pickup_datetime', 'tpep_dropoff_datetime'])\n",
     "df.sample(5)"
    ]
   },
